update message in upload